# project1

./: README.md
3lab/: 3lab.ipynb  3lab.py  README.md
4lab/: 4lab.ipynb  4lab.txt  README.md
5lab/: 5lab.ipynb  5lab.py  README.md  a.txt  lecture.ipynb
5lab_paradigms/: 5lab_paradigms.py  README.md
5lab_work_with_classes/: README.md  classes.ipynb
6lab/: README.MD
6lab/flask_app/: README.md  app.py
6lab/myproject/: pyproject.toml
6lab/pipenv/: Pipfile  main.py
Test OOP/: Zalik.ipynb
init/: README.md
